Change log for zeit.web
=======================

2.29 (unreleased)
-----------------

- ZON-2393: Replace adlabel span by css content to improve ad reloading

  - FIX: Be more defensive in several places:
  * displaying content with invalid timestamps
  * caching content with non-ascii uniqueIds


2.28 (2015-11-17)
-----------------

- ZON-2214: Decrease timeouts for reach.zeit.de

- ZON-2388: Tweak Navi to make Spiele reappear

- ZON-2331: AdReloading wrapper script

- ZON-2159: Fill up first-page of paginated, ranking CPs with deduped content

- FIX: Disable article-lineage tests for Jenkins

- FIX: Add missing teaser style to ZMO parquet teaser

- FIX: Fix overlapping gallery images on mobile view


2.27 (2015-11-16)
-----------------

- MAINT: Add a function in utils that helps to debug requests via curl

- FIX: Skip nonexistent content (instead of trying to make it "work" somehow
  with FakeEntry)

- ZON-2159: Implement rudimentary paginated centerpage view


2.26 (2015-11-16)
-----------------

- ZON-2396: Support specialized quiz module on CPs and articles

- ZON-2400: Send static parameter for cardstack body on CPs

- ZON-2359: Edit zeitshop link


2.25 (2015-11-12)
-----------------

- FIX: Studiumbox (repair tracking, add fallback for empty form, rename module,
  fix icon display, correct spelling, add tests)

- FIX: Add advertorial keywords to banner config

- ZON-2159: Nestle ranking area closer up to cms code

- ZON-2399: Check if ad-nextread folder contains items, not just if it's there

- FIX: rework ZMO galleries (back to normal)

- ZON-2376: Use pagetitle in og:title meta tag

- ZON-2325: Implement Reisebox and add Tracking to all Boxes

- ZON-2047: Teaser kicker design for ZMO and ze.tt

- FIX: Make veeseo video widget appear before advertisement nextread

- FIX: Rework ZMO galleries (back to normal)

- FIX: Add missing horizontal padding to videostage-heading

- FIX: fixes/optimization for Printbanderole
